--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,13 @@
             box-shadow: 10px 10px 10px #ccc;
             margin-bottom: 20px;
         }
+        .insight h2{
+            color: coral;
+        }
+        .insight > p{
+            line-height: 30px;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
@@ -26,12 +33,53 @@
         </div>
         <div class="insight">
             <h2>個人簡介</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dignissimos ipsam quod aliquam omnis culpa, cumque voluptates natus. Impedit rerum in, similique cupiditate eum nemo quam assumenda rem voluptatibus. Odio.</p>
+            <p>
+                我是蔡承翰，畢業於台大工業工程所，曾擔任過3年半的台積電產線工程師，前份工作主要是收集機台數據解決產線問題
+                ，輔導作業員遠端操作機台，之後因家庭因素從台中上來台北找工作。由於大學時期學過python，研究所論文也以C#撰寫電梯
+                排程模擬程式，進而對程式有興趣，想找相關工作，目前的目標是朝向後端工程師邁進。
+            </p>
         </div>
         <div class="insight">
-            <h2>個人簡介</h2>
+            <h2>為甚麼想成為工程師?</h2>
+            <p>一方面是因為大學時期曾接觸過程式，那時以python做一些數值分析，知道學會程式後可以進行許多大量的數據整理及統合，並且
+                在台積電工作時期，也藉由SQL撈取資料庫內的機台數據，整理後並跨部門合作解決許多問題，更感受到程式的強大，
+                雖然目前只學過SQL、python、C#、javascript的皮毛，但我想要成為工程師解決許多問題，獲得成就感，並提升自己的競爭力。
+            </p>
+        </div>
+        <div class="insight">
+            <h2>成為工程師所做的努力</h2>
             <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                離職後主要是每天寫leetcode熟悉面試題目及演算法，並且有上線上課程熟悉基礎網頁概念、並學習css/html/javascript等，
+                而目前有做出屬於自己的個人網頁，沒有用任何套件從css基礎排版開始做起 ( <a href="https://tony-website-project.herokuapp.com/" target="_blank">個人網站連結</a> )，
+                網頁主要內容是上傳我用python做的財務金融分析，以及一些leetcode的特殊題目的原始程式碼分享及撰寫心得。
+            </p>
+        </div>
+        <div class="insight">
+            <h2>對於工程師的職業想像是什麼</h2>
+            <p>
+                每天跟客戶確認進度並且與同事討論專案內容等等，然後預期會遇到許多溝通上的困難以及不停地修改，但完成所有的進度後會獲得不少的成就感。
+            </p>
+        </div>
+        <div class="insight">
+            <h2>如果參與計畫，怎麼安排學習時間</h2>
+            <p>
+                除了計畫內的每周固定作業外，我還會繼續每天至少寫五題以上的leetcode medium，並將一些心得持續上傳到個人網頁中。如果時間允許的話，我會將撰寫網頁
+                或寫leetcode中碰到的困難整理成部落格發佈。
+            </p>
+        </div>
+        <div class="insight">
+            <h2>預期碰到的困難?打算如何解決?</h2>
+            <p>
+                預期會碰到概念上的不理解及自己的惰性，一方面當初在理解網頁架構的時候，就有很多模糊不清的名詞概念及運作邏輯要釐清，後來是不停的google收集資料才理解到些許皮毛；
+                而自己的惰性是之前在自我練習的時候，由於懶惰偶爾放掉一兩天的練習，但後來卻變成放掉一整個禮拜不練習，因此我強迫自己每天都要寫code，網頁練習或者leetcode都好，
+                每天都要碰，而目前不中斷已經超過半年多。
+            </p>
+        </div>
+        <div class="insight">
+            <h2>想要對我們說的事情</h2>
+            <p>
+                當初看到彭彭老師的youtube，覺得影片內容很容易讓新手進入狀況，並且不會有太多艱澀難懂的名詞，概念也都解釋得很清晰，
+                無論是網頁或者python等等，我的概念有一半以上都是從老師這邊獲得的。很感謝老師開設這個計畫讓我有機會參與，不會讓自己顯得都在埋頭苦幹，但找不到方向。
             </p>
         </div>
     </div>
